crates/sui-graphql-macros/tests/compile/mutation_invalid_query_field.stderr
error: Field 'epoch' not found on type 'Mutation' in path 'epoch.epochId'. Available fields: executeTransaction
 --> tests/compile/mutation_invalid_query_field.rs:8:5
  |
8 |     epoch_id: u64,
  |     ^^^^^^^^
